Refactor and improve style

--- a/workflow-ui/webContent/includes/components/caseDetails/caseList.xhtml
+++ b/workflow-ui/webContent/includes/components/caseDetails/caseList.xhtml
@@ -5,7 +5,7 @@
   xmlns:jc="http://java.sun.com/jsf/composite/components">
 
   <h:panelGroup layout="block" class="action-container #{casesDetailsBean.isCurrentHierarchyCase(casesDetailsBean.selectedCase.getBusinessCase())}">
-    <jc:caseLink case="#{casesDetailsBean.selectedCase.getBusinessCase()}" id="business-case"/>
+    <jc:caseLink case="#{casesDetailsBean.selectedCase.getBusinessCase()}" id="businessCase"/>
   </h:panelGroup>
 
   <h:panelGroup layout="block">
