--- a/workflow-ui/webContent/includes/components/casesTable.xhtml
+++ b/workflow-ui/webContent/includes/components/casesTable.xhtml
@@ -18,19 +18,21 @@
     </f:facet>
 
     <p:column styleClass="icon-row">
-      <i class="si si-lg si-task-list-approve" title="ID: #{case.id}"></i>
+      <h:outputText id="caseIcon" styleClass="si si-lg si-task-list-approve" />
+      <p:tooltip for="caseIcon" value="ID: #{case.id}" position="top" />
     </p:column>
 
     <p:column filterBy="#{case.getState()}" styleClass="icon-row">
-      <i class="si si-lg si-#{casesBean.getStateIcon(case.getState())}" title="State #{case.getState()}"></i>
+      <h:outputText id="caseState" styleClass="si si-lg si-#{casesBean.getStateIcon(case.getState())}" />
+      <p:tooltip for="caseState" value="State: #{case.getState()}" position="top" />
     </p:column>
 
     <p:column headerText="Name" filterBy="#{case.getName()}">
-      <h:outputText value="#{casesBean.getName(case)}"/>
+      <h:outputText value="#{casesBean.getName(case)}" />
     </p:column>
 
     <p:column headerText="Creator" filterBy="#{case.getCreatorUserName()}">
-      <jc:user user="#{case.creatorUser}"/>
+      <jc:user user="#{case.creatorUser}" />
     </p:column>
 
     <p:column headerText="Start Date" style="text-align: center;">
