--- a/workflow-ui/webContent/resources/components/caseLink.xhtml
+++ b/workflow-ui/webContent/resources/components/caseLink.xhtml
@@ -7,12 +7,13 @@
 </cc:interface>
 
 <cc:implementation>
-  <p:commandLink styleClass="case-link" actionListener="#{casesDetailsBean.redirectToCase(cc.attrs.case)}">
+  <h:link styleClass="case-link" outcome="caseDetails">
+    <f:param name="case" value="#{cc.attrs.case.id}"/>
     <i class="si si-task-list-approve case-link-icon margin-right-5" />
     <h:outputText id="caseState" styleClass="si si-#{casesBean.getStateIcon(cc.attrs.case.getState())} case-link-icon margin-right-5"/>
     <p:tooltip for="caseState" value="State: #{cc.attrs.case.state}" position="top"/>
     <h:outputText id="caseLink" value="#{casesBean.getName(cc.attrs.case)}" />
     <p:tooltip for="caseLink" value="ID: #{cc.attrs.case.id}" position="top"/>
-  </p:commandLink>
+  </h:link>
 </cc:implementation>
 </html>
