--- a/workflow-ui/webContent/resources/components/taskLink.xhtml
+++ b/workflow-ui/webContent/resources/components/taskLink.xhtml
@@ -9,12 +9,13 @@
 
 <cc:implementation>
   <ui:param name="task" value="#{tasksBean.toTaskLinkModel(cc.attrs.task)}"/>
-  <p:commandLink styleClass="case-link" actionListener="#{task.redirectToTask()}">
+  <h:link styleClass="case-link" outcome="taskDetails">
+    <f:param name="task" value="#{task.id}"/>
     <i class="si si-task-list-edit case-link-icon margin-right-5" />
     <h:outputText id="taskState" styleClass="si si-#{task.stateIcon} case-link-icon margin-right-5" />
     <p:tooltip for="taskState" value="State: #{task.state}" position="top"/>
     <h:outputText id="taskLink" value="#{task.name}" />
     <p:tooltip for="taskLink" value="ID: #{task.id}" position="top"/>
-  </p:commandLink>
+  </h:link>
 </cc:implementation>
 </html>
