--- a/workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
+++ b/workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
@@ -1,11 +1,12 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
-  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
+  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
+  xmlns:jc="http://java.sun.com/jsf/composite/components">
 
-  <p:dataTable id="tasks" var="task" value="#{casesDetailsBean.selectedCase.activeTasks}" widgetVar="tasksTable"
-    emptyMessage="No Tasks found with given criteria" style="margin-top:10px" lazy="true" paginatorPosition="bottom"
-    rows="10" rowsPerPageTemplate="10,20,50" paginator="true" paginatorAlwaysVisible="false"
+  <p:dataTable id="tasks" var="task" value="#{casesDetailsBean.selectedCase.tasks().all()}"
+    widgetVar="tasksTable" emptyMessage="No Tasks found with given criteria" style="margin-top:10px" lazy="true"
+    paginatorPosition="bottom" rows="10" rowsPerPageTemplate="10,20,50" paginator="true" paginatorAlwaysVisible="false"
     paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}">
 
     <p:column filterBy="#{task.state}" styleClass="icon-row">
@@ -30,6 +31,10 @@
 
     <p:column headerText="Expiry" style="text-align: center;">
       <h:outputText id="expiryTime" value="#{dateTimeBean.getDateTime(task.expiryTimestamp)}" />
+    </p:column>
+
+    <p:column headerText="Case" style="text-align: center;" rendered="#{casesDetailsBean.selectedCase.businessCase}">
+      <jc:caseLink case="#{task.getCase()}" />
     </p:column>
 
     <p:column style="width: 60px; text-align: center;">
