--- a/workflow-ui/webContent/includes/components/tasksTable.xhtml
+++ b/workflow-ui/webContent/includes/components/tasksTable.xhtml
@@ -38,13 +38,19 @@
       <jc:user user="#{task.activator}" />
     </p:column>
 
-    <p:column headerText="Start Date" style="text-align: center;">
+    <p:column headerText="Start" style="text-align: center;">
       <h:outputText id="startTime" value="#{dateTimeBean.getPrettyTime(task.startTimestamp)}" />
       <p:tooltip for="startTime" value="#{dateTimeBean.getDateTime(task.startTimestamp)}" position="top" />
     </p:column>
 
-    <p:column headerText="Expiry" style="text-align: center;">
-      <h:outputText id="expiryTime" value="#{dateTimeBean.getDateTime(task.expiryTimestamp)}" />
+    <p:column headerText="Expiry" style="text-align: center;" rendered="#{tasksBean.checkIfPersonalTasks()}">
+      <h:outputText id="expiryTime" value="#{dateTimeBean.getPrettyTime(task.expiryTimestamp)}" />
+      <p:tooltip for="expiryTime" value="#{dateTimeBean.getDateTime(task.expiryTimestamp)}" position="top" />
+    </p:column>
+
+    <p:column headerText="End" style="text-align: center;" rendered="#{!tasksBean.checkIfPersonalTasks()}">
+      <h:outputText id="endTime" value="#{dateTimeBean.getPrettyTime(task.endTimestamp)}" />
+      <p:tooltip for="endTime" value="#{dateTimeBean.getDateTime(task.endTimestamp)}" position="top" />
     </p:column>
 
     <p:column style="width: 60px; text-align: center;">
