--- a/workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
+++ b/workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
@@ -29,13 +29,11 @@
     </p:column>
 
     <p:column headerText="Start" style="text-align: center;">
-      <h:outputText id="startTime" value="#{dateTimeBean.getPrettyTime(task.startTimestamp)}" />
-      <p:tooltip for="startTime" value="#{dateTimeBean.getDateTime(task.startTimestamp)}" position="top" />
+      <jc:datetime id="startTime" datetime="#{task.startTimestamp}"/>
     </p:column>
 
     <p:column headerText="End" style="text-align: center;">
-      <h:outputText id="endTime" value="#{dateTimeBean.getPrettyTime(task.endTimestamp)}" />
-      <p:tooltip for="endTime" value="#{dateTimeBean.getDateTime(task.endTimestamp)}" position="top"/>
+      <jc:datetime id="endTime" datetime="#{task.endTimestamp}"/>
     </p:column>
 
     <p:column style="width: 60px; text-align: center;">
