--- a/workflow-ui/webContent/includes/components/casesTable.xhtml
+++ b/workflow-ui/webContent/includes/components/casesTable.xhtml
@@ -39,13 +39,11 @@
     </p:column>
 
     <p:column headerText="Start" style="text-align: center;">
-      <h:outputText id="startTime" value="#{dateTimeBean.getPrettyTime(case.startTimestamp)}" />
-      <p:tooltip for="startTime" value="#{dateTimeBean.getDateTime(case.startTimestamp)}" position="top" />
+      <jc:datetime id="startTime" datetime="#{case.startTimestamp}"/>
     </p:column>
 
     <p:column headerText="End" style="text-align: center;">
-      <h:outputText id="endTime" value="#{dateTimeBean.getPrettyTime(case.endTimestamp)}" />
-      <p:tooltip for="startTime" value="#{dateTimeBean.getDateTime(case.endTimestamp)}" position="top" />
+      <jc:datetime id="endTime" datetime="#{case.endTimestamp}"/>
     </p:column>
 
     <p:column style="width: 60px; text-align: center;">
