--- a/workflow-ui/webContent/includes/components/signals/firedSignals.xhtml
+++ b/workflow-ui/webContent/includes/components/signals/firedSignals.xhtml
@@ -16,8 +16,7 @@
       <h:outputText value="#{signal.signalCode}" />
     </p:column>
     <p:column headerText="Date">
-      <h:outputText id="timestamp" value="#{dateTimeBean.getPrettyTime(signal.sentTimestamp)}" />
-      <p:tooltip for="timestamp" value="#{dateTimeBean.getDateTime(signal.sentTimestamp)}" position="top" />
+      <jc:datetime id="sentTime" datetime="#{signal.sentTimestamp}"/>
     </p:column>
     <p:column headerText="Sent by">
       <jc:user user="#{signal.sentByUser}"/>
